--- a/assets/docker/docker-compose.noproxy.yml
+++ b/assets/docker/docker-compose.noproxy.yml
@@ -2,10 +2,10 @@ version: "2"
 services:
   web:
     environment:
-      - VIRTUAL_HOST=dkan.local
+      - VIRTUAL_HOST=dkan
       - no_proxy=localhost
       #- VIRTUAL_PROTO=https
   cli:
     environment:
-      - PHP_IDE_CONFIG=serverName=dkan.local
-      - VIRTUAL_HOST=dkan.local
+      - PHP_IDE_CONFIG=serverName=dkan
+      - VIRTUAL_HOST=dkan
