--- a/assets/docker/docker-compose.common.yml
+++ b/assets/docker/docker-compose.common.yml
@@ -53,6 +53,7 @@ services:
     image: getdkan/dkan-docker:php7-cli
     environment:
       - DKTL_MODE=HOST
+      - DKTL_DOCKER=1
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - PROXY_DOMAIN
